# kekkai

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
module/: default.nix
src/: api.rs  config.rs  connection.rs  input.rs  main.rs  mcp.rs  render.rs  scripting.rs  servers.rs
