[package]
name = "mamorigami"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Kekkai (結界) — GPU-rendered NordVPN client powered by the NordVPN service"
homepage = "https://github.com/pleme-io/kekkai"
repository = "https://github.com/pleme-io/kekkai"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/mamorigami"
categories = ["command-line-utilities"]
keywords = ["vpn", "nordvpn", "wireguard", "gpu", "network"]
publish = true

[[bin]]
name = "kekkai"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
# Pleme-io shared libraries
garasu = { git = "https://github.com/pleme-io/garasu" }
madori = { git = "https://github.com/pleme-io/madori" }
egaku = { git = "https://github.com/pleme-io/egaku" }
irodzuki = { git = "https://github.com/pleme-io/irodzuki" }
todoku = { git = "https://github.com/pleme-io/todoku" }
tsunagu = { git = "https://github.com/pleme-io/tsunagu" }
kaname = { git = "https://github.com/pleme-io/kaname" }
shikumi = { git = "https://github.com/pleme-io/shikumi" }
shidou = { git = "https://github.com/pleme-io/shidou" }
soushi = { git = "https://github.com/pleme-io/soushi" }
awase = { git = "https://github.com/pleme-io/awase" }

# MCP server (rmcp + schemars needed for derive macros used alongside kaname)
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"

# GPU rendering
wgpu = "25"
winit = "0.30"
pollster = "0.4"
glyphon = "0.9"

# NordVPN API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI and config
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
dirs = "6.0"

[dev-dependencies]
tempfile = "3"
